--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,5 +1,5 @@
 <div class="container" id="errorBox">
-    <h2 class="infoHead">404 Error</h2>
+    <h2 class="infoHead center-align">404 Error</h2>
     <h3>Please check your connection and try again</h3>
-    <a href="/home"><button class="btn waves-effect waves-light">Go back</button></a>
+    <a href="/"><button class="btn waves-effect waves-light center-align">Go back</button></a>
 </div>
