--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -121,6 +121,10 @@
                                         </div>
                                     </form>
                                 </div>
+                                <div class="col s12 center-align" class="image-preview" id="standardImagePreview">
+                                    <img src="" alt="Image Preview" class="standardImage-preview__image hidden">
+                                    <span class="standardImage-preview__default-text">Image Preview</span>
+                                </div>
                                 <div class="row">
                                     <a class="col s12 waves-effect waves-light btn addToCart" id="submitStandardBtn">
                                         <i class="material-icons left">add_shopping_cart</i>Add to cart</a>
@@ -250,9 +254,9 @@
                                             </div>
                                         </form>
                                     </div>
-                                    <div class="col s12 center-align" class="image-preview" id="imagePreview">
-                                        <img src="" alt="Image Preview" class="image-preview__image hidden">
-                                        <span class="image-preview__default-text">Image Preview</span>
+                                    <div class="col s12 center-align" class="image-preview" id="premiumImagePreview">
+                                        <img src="" alt="Image Preview" class="premiumImage-preview__image hidden">
+                                        <span class="premiumImage-preview__default-text">Image Preview</span>
                                     </div>
                                 </div>
                                 <div class="row">
