success and cancel page css additions

--- a/views/successful.handlebars
+++ b/views/successful.handlebars
@@ -1,2 +1,4 @@
-<h1>Success!</h1>
-<a href="/"><button class="btn waves-effect waves-light center-align">Return home</button></a>
+<div class="container">
+    <h1>Success!</h1>
+    <a href="/"><button class="btn waves-effect waves-light center-align">Return home</button></a>
+</div>
