--- a/views/cancelled.handlebars
+++ b/views/cancelled.handlebars
@@ -1,2 +1,4 @@
-<h1>Cancelled</h1>
-<a href="/"><button class="btn waves-effect waves-light center-align">Return home</button></a>
+<div class="container">
+    <h1>Cancelled</h1>
+    <a href="/"><button class="btn waves-effect waves-light center-align">Return home</button></a>
+</div>
