--- a/views/successful.handlebars
+++ b/views/successful.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container center-align" style="width: 60%">
     <h1>Success!</h1>
     <a href="/"><button class="btn waves-effect waves-light center-align">Return home</button></a>
 </div>
