--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,18 +29,18 @@
                         <div class="row">
                             <div class="input-field col s12 m6 l6">
                                 <i class="material-icons prefix">account_circle</i>
-                                <input id="icon_prefix" type="text" class="validate">
-                                <label for="icon_prefix">Full Name</label>
+                                <input id="customPrefix" type="text" class="validate">
+                                <label for="customPrefix">Full Name</label>
                             </div>
                             <div class="input-field col s12 m6 l6">
                                 <i class="material-icons prefix">phone</i>
-                                <input id="icon_telephone" type="tel" class="validate">
-                                <label for="icon_telephone">Phone Number</label>
+                                <input id="customTelephone" type="tel" class="validate">
+                                <label for="customTelephone">Phone Number</label>
                             </div>
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">email</i>
-                                <input id="icon_email" type="email" class="validate">
-                                <label for="icon_email">Email</label>
+                                <input id="customEmail" type="email" class="validate">
+                                <label for="customEmail">Email</label>
                             </div>
                         </div>
                     </form>
