--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,7 +40,7 @@
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">email</i>
                                 <input id="customEmail" type="email" class="validate">
-                                <label for="customEmail">Email</label>
+                                <label for="customEmail" style="center-align">Email</label>
                             </div>
                         </div>
                     </form>
@@ -60,7 +60,7 @@
             </div>
             <div id="customModalSuccessDiv" class="hidden">
                 <h4>Your message has been sent!</h4>
-                <h5>Please allow 1 business day for a quote</h5>
+                <h5 class="orange-text">Please allow 1 business day for a quote</h5>
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat orange-text">Okay</a>
             </div>
         </div>
