--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -61,7 +61,8 @@
             <div id="customModalSuccessDiv" class="hidden">
                 <h4>Your message has been sent!</h4>
                 <h5 class="orange-text">Please allow 1 business day for a quote</h5>
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat orange-text">Okay</a>
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat orange-text"
+                    id="customModalClose">Okay</a>
             </div>
         </div>
     </div>
