custom modal added to all sections

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -125,7 +125,7 @@
                                                 <option value="2x7-1.00">2in x 7in</option>
                                                 <option value="3x8-1.50">3in x 8in</option>
                                                 <option value="4x9-2.00">4in x 9in</option>
-                                                <option value="Custom">Custom (Price inquiry w/ owner)</option>
+                                                <option value="Custom-0.00">Custom (Price inquiry w/ owner)</option>
                                             </select>
                                             <label class="inputLabel">Select Size</label>
                                         </div>
@@ -256,7 +256,7 @@
                                                 <option value="2x7-1.50">2in x 7in</option>
                                                 <option value="3x8-2.00">3in x 8in</option>
                                                 <option value="4x9-2.50">4in x 9in</option>
-                                                <option value="Custom">Custom (Price inquiry w/ owner)</option>
+                                                <option value="Custom-0.00">Custom (Price inquiry w/ owner)</option>
                                             </select>
                                             <label class="inputLabel">Select Size</label>
                                         </div>
@@ -362,7 +362,7 @@
                                                 <option value="2x7-5.00">2in x 7in</option>
                                                 <option value="3x8-5.00">3in x 8in</option>
                                                 <option value="4x9-5.00">4in x 9in</option>
-                                                <option value="Custom">Custom (Price inquiry w/ owner)</option>
+                                                <option value="Custom-0.00">Custom (Price inquiry w/ owner)</option>
                                             </select>
                                             <label class="inputLabel">Select Size</label>
                                         </div>
