condensed add to cart logic

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -191,7 +191,9 @@
                                     <img src="" alt="Image Preview" class="standardImage-preview__image hidden">
                                 </div>
                                 <div class="row">
-                                    <a class="col s12 waves-effect waves-light btn addToCart" id="submitStandardBtn">
+                                    <a data-type="standard"
+                                        class="col s12 waves-effect waves-light btn addToCart addToCartFile"
+                                        id="submitStandardBtn">
                                         <i class="material-icons left">add_shopping_cart</i>Add to cart</a>
                                 </div>
                             </form>
@@ -324,7 +326,8 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <a class="col s12 waves-effect waves-light btn addToCart modal-trigger"
+                                    <a data-type="premium"
+                                        class="col s12 waves-effect waves-light btn addToCart addToCartFile modal-trigger"
                                         href="#addedModal" id="submitPremiumBtn">
                                         <i class="material-icons left">add_shopping_cart</i>SUBMIT ORDER</a>
                                 </div>
@@ -404,7 +407,8 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <a class="col s12 waves-effect waves-light btn addToCart modal-trigger"
+                                    <a data-type="house"
+                                        class="col s12 waves-effect waves-light btn addToCart modal-trigger"
                                         href="#addedModal" id="submitHouseBtn">
                                         <i class="material-icons left">add_shopping_cart</i>Add to cart</a>
                                 </div>
