--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -179,7 +179,8 @@
                                         <div class="file-field input-field">
                                             <div class="btn linkImgBtns">
                                                 <span>File</span>
-                                                <input class="linkImgBtns" type="file" id="standardLinkImage">
+                                                <input data-type="standard" class="linkImgBtns linkImage"
+                                                    id="standardLinkImage" type="file">
                                             </div>
                                             <div class="file-path-wrapper">
                                                 <input class="file-path validate" type="text">
@@ -187,7 +188,7 @@
                                         </div>
                                     </form>
                                 </div>
-                                <div class="col s12 center-align" class="image-preview" id="standardImagePreview">
+                                <div class="col s12 center-align" class="image-preview" class="imagePreview">
                                     <img src="" alt="Image Preview" class="standardImage-preview__image hidden">
                                 </div>
                                 <div class="row">
@@ -313,7 +314,8 @@
                                             <div class="file-field input-field">
                                                 <div class="btn linkImgBtns">
                                                     <span>File</span>
-                                                    <input type="file" class="linkImgBtns" id="premiumLinkImage">
+                                                    <input type="file" class="linkImgBtns linkImage"
+                                                        id="premiumLinkImage">
                                                 </div>
                                                 <div class="file-path-wrapper">
                                                     <input class="file-path validate" type="text">
@@ -322,7 +324,8 @@
                                         </form>
                                     </div>
                                     <div class="col s12 center-align" class="image-preview" id="premiumImagePreview">
-                                        <img src="" alt="Image Preview" class="premiumImage-preview__image hidden">
+                                        <img data-type="standard" src="" alt="Image Preview"
+                                            class="premiumImage-preview__image hidden">
                                     </div>
                                 </div>
                                 <div class="row">
