form to ajax paypal button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -546,13 +546,16 @@
                                         </a>
                                     </div>
                                     <div class="col s12 l6">
-                                        <form action="/pay" method="POST">
+                                        <a class="waves-effect waves-light btn blue darken-2" id="payWithPaypal">
+                                            <i class="material-icons left">done</i>Pay with Paypal
+                                        </a>
+                                        {{!-- <form action="/pay" method="POST">
                                             <a class="waves-effect waves-light btn blue lighten-2" id="confirmBtn">
                                                 <input type="submit" value='Pay with Paypal'>
                                                 <i class="material-icons left">done</i>
                                                 </input>
                                             </a>
-                                        </form>
+                                        </form> --}}
                                     </div>
                                 </div>
                             </div>
